[package]
name = "placey"
version = "0.1.0"
authors = ["Becky <https://github.com/bekapod>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
quickcheck = "1"