[package]
name = "placey"
version = "0.1.0"
authors = ["Becky <https://github.com/bekapod>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
image = "0.24"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
imageproc = "0.23"
rusttype = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1"

[[bench]]
path = "./src/benches/generate_image.rs"
name = "generate_image"
harness = false