[package]
name = "placey"
version = "0.1.0"
authors = ["Becky <https://github.com/bekapod>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
image = "0.25"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
imageproc = "0.27"
ab_glyph = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3.23"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
quickcheck = "1"
warp = { version = "0.4", features = ["test"] }

[[bench]]
path = "./src/benches/generate_image.rs"
name = "generate_image"
harness = false